manifests/basic_auth/basic-auth-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth-client
spec:
  containers:
  - name: debug
    image: curlimages/curl
    command: ["sleep", "3600"]
