manifests/basic_auth/basic-ui-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-client
  template:
    metadata:
      labels:
        app: ui-client
    spec:
      containers:
        - name: ui
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ui-static
              mountPath: /usr/share/nginx/html
      volumes:
        - name: ui-static
          configMap:
            name: ui-static

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app: ui-client
  ports:
    - port: 80
      targetPort: 80
