manifests/basic_auth/ui-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-client
  template:
    metadata:
      labels:
        app: ui-client
    spec:
      containers:
        - name: ui
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ui-static
              mountPath: /usr/share/nginx/html
            - name: ui-nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: ui-static
          configMap:
            name: ui-static
        - name: ui-nginx-conf
          configMap:
            name: ui-nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  selector:
    app: ui-client
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31800
