manifests/basic_auth/basic-auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: basic-auth-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: https
  hostnames:
    - jwtlab.local
  rules:
  
    - matches:
        - path:
            type: Exact
            value: /api/auth/basic
      backendRefs:
        - name: auth-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /ui
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ui-service
          port: 80
    
    # Root-level assets referenced by the UI HTML
    - matches:
        - path:
            type: Exact
            value: /styles.css
        - path:
            type: Exact
            value: /app.js
      backendRefs:
        - name: ui-service
          port: 80
